# LeagueOfAgents

./: .gitignore  LICENSE  README.md  launch.sh  main.py  pyproject.toml  requirements.txt
config/: default.yaml  doudizhu.yaml  draw_and_guess.yaml
doc/: api_reference.md  architecture.md
doc/class/: mid_term_report.md  proposal.md
games/doudizhu/: __init__.py  engine.py  prompts.py  rules.py
games/draw_and_guess/: __init__.py  agents.py  engine.py  prompts.py  referee.py  tools.py
league/: __init__.py  types.py
league/agent/: __init__.py  base.py  llm_agent.py  memory.py
league/engine/: __init__.py  base.py
league/llm/: client.py
league/logger/: __init__.py  game_logger.py
league/prompts/: __init__.py  agent.py  referee.py
league/referee/: __init__.py  base.py  llm_referee.py
league/tools/: __init__.py  base.py
